--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
